--- a/index.html
+++ b/index.html
@@ -4,6 +4,105 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>랜딩페이지</title>
+      <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+      <!-- bootstrap -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+      <!-- swiper -->
+      <link rel="stylesheet" href="./assets/style/commons.css" />
+      <link rel="stylesheet" href="./assets/style/styles.css" />
    </head>
-   <body></body>
+   <body>
+      <header></header>
+      <section class="kv">
+         <!-- swiper -->
+         <div class="swiper kvSlider">
+            <div class="swiper-wrapper">
+               <div class="swiper-slide">
+                  <div class="kv--title text-center">
+                     <h2>당신의 스타일을 기록하세요</h2>
+                     <a href="#" class="kv--title__cta mt-20">자세히 보기</a>
+                  </div>
+               </div>
+               <div class="swiper-slide">
+                  <div class="kv--title text-center">
+                     <h2>좋아요 대신 스크랩</h2>
+                     <a href="#" class="kv--title__cta mt-20">한 번의 클릭으로 나만의 스타일 북 완성</a>
+                  </div>
+               </div>
+               <div class="swiper-slide">
+                  <div class="kv--title text-center">
+                     <h2>나만의 아카이브, 모두의 컬렉션</h2>
+                     <a href="#" class="kv--title__cta mt-20">개성과 취향을 모아 새로운 언어로</a>
+                  </div>
+               </div>
+               <div class="swiper-slide">
+                  <div class="kv--title text-center">
+                     <h2>공유로 확장되는 스타일</h2>
+                     <a href="#" class="kv--title__cta mt-20">당신의 선택이 다른 이의 영감이 됩니다</a>
+                  </div>
+               </div>
+            </div>
+            <div class="swiper-pagination"></div>
+         </div>
+      </section>
+      <!-- kv End -->
+      <!-- content start -->
+      <section class="aiContent common-padding">
+         <div class="container">
+            <div class="row">
+               <div class="col-md-12">
+                  <div class="content--title text-center">
+                     <h3 class="line">기록하고, 모으고, 나누는 패션의 즐거움</h3>
+                     <p>당신의 일상이 곧 트렌드가 됩니다</p>
+                  </div>
+               </div>
+            </div>
+            <div class="row text-center mt-40">
+               <div class="col-md-3 col-6">
+                  <div class="service">
+                     <img src="assets/images/icon/ph_camera.svg" alt="아이콘" />
+                     <h4 class="mt-40">오늘의 착장 기록</h4>
+                     <p class="mt-20">하루의 무드를 그대로 담아두세요</p>
+                  </div>
+               </div>
+               <div class="col-md-3 col-6">
+                  <div class="service">
+                     <img src="assets/images/icon/proicons_photo.svg" alt="아이콘" />
+                     <h4 class="mt-40">스타일 스크랩</h4>
+                     <p class="mt-20">마음에 드는 룩을 컬렉션에 저장</p>
+                  </div>
+               </div>
+               <div class="col-md-3 col-6">
+                  <div class="service">
+                     <img src="assets/images/icon/fluent_note-add-16-regular.svg" alt="아이콘" />
+                     <h4 class="mt-40">공유와 피드백</h4>
+                     <p class="mt-20">서로의 시선을 통해 새로운 감각을 발견합니다</p>
+                  </div>
+               </div>
+               <div class="col-md-3 col-6">
+                  <div class="service">
+                     <img src="assets/images/icon/fluent_clothes-hanger-12-regular.svg" alt="아이콘" />
+                     <h4 class="mt-40">스타일 탐색</h4>
+                     <p class="mt-20">트렌드부터 아카이브까지 한눈에</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <footer></footer>
+
+      <!-- bootstrap -->
+      <script src="./assets/js/jquery.slim.min.js"></script>
+      <script src="./assets/js/bootstrap.bundle.min.js"></script>
+      <!-- swiper -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+      <!-- Initialize Swiper -->
+      <script>
+         var swiper = new Swiper('.kvSlider', {
+            pagination: {
+               el: '.swiper-pagination',
+            },
+         })
+      </script>
+   </body>
 </html>
